# F1_Qualifying_Predictor_ML

./: .gitignore  .replit  CNAME  F1_Quali.py  FastF1_testing.py  README.md  app.py  avg_grid_positions.txt  avg_grid_positions_df.txt  content.html  dataframe_read.py  fake_2025.csv  get_ergast_data.py  get_new_data.py  lap_data.csv  lap_data_0.csv  new_race.csv  package-lock.json  package.json  pole_times.py  pyproject.toml  read_avg_grid.py  replit.nix  test.csv  times.csv  trained_model.json  webpack.config.js
backend/: app.py  server.py
backend/data/: lap_data.csv  new_race.csv  old_data.csv
backend/src/: F1_Quali.py  dataframe_read.py  get_avg_grid_pos.py  get_ergast_data.py  get_new_data.py  trained_model.json
data/: avg_grid_positions_df.txt  lap_data.csv  lap_data_0.csv  new_race.csv  qualifying.csv  test.csv  times.csv
docs/: README.md  resources.md
f1-app/: package-lock.json  package.json
f1-app/public/: index.html  manifest.json
f1-app/src/: App.css  App.js  CloseButton.js  CustomizedSwitches.js  DriverMenu.js  EnterButton.js  MainButton.js  SessionMenu.js  SessionResultsModal.js
frontend/: index.js  index.js.map  package-lock.json  package.json
frontend/.parcel-cache/: 7f973df67467291d-AssetGraph-0  adb9e64d5da6fbba-AssetGraph-0  d48c91545c145068-BundleGraph-0  d714f9b67bb9ad80-BundleGraph-0  data.mdb  (+7 more)
legacy_implementation/: package-lock.json  package.json
public/: index.html
src/: App.js  CloseButton.js  DriverMenu.js  F1_Quali.py  get_data_from_web.py  get_new_data.py
static/: script.js  styles.css
templates/: content.html
(+9 files in other folders)
