[tool.poetry]
name = "repl-nix-f1qualifyingpredictorml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
fastf1 = "3.4.0"
pandas = "2.2.3"
numpy = "2.1.1"
xgboost = "2.1.1"
matplotlib = "3.9.2"
scikit-learn = "1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
